# Drone_Openenv

./: .gitignore  AIRSIM_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_STATUS.md  FINAL_VALIDATION.sh  README.md  RUN_AIRSIM_RL.md  SUBMISSION_CHECKLIST.md  SUBMISSION_READY.md  VALIDATION_TEST.sh  __init__.py  app.py  catch_error.py  check_deps.py  error_log.txt  graders.py  inference.py  launch_airsim.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_airsim_rl.py  sanity_check.py  setup.md  tasks.py
airsim_bridge/: connector.py
environment/: __init__.py  airsim_env.py  drone_env.py  graders.py  models.py  pedra_bridge.py  (+2 more)
my_env_round1/: Dockerfile  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validation_output.txt  validation_result.txt  validation_result_v2.txt  validation_result_v3.txt
my_env_round1/environment/: __init__.py  drone_env.py  graders.py  models.py  tasks.py
my_env_round1/server/: app.py
round1_submission/: .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  sanity_check.py  tasks.py  test_local.py  test_score_range.py
round1_submission/environment/: __init__.py  airsim_env.py  dqn_agent.py  drone_env.py  graders.py  tasks.py
round1_submission/models/ddqn/: ddqn_final.pt
round1_submission/rl_agent/: dqn_agent.py  ppo_agent.py  train_physics.py
round1_submission/runs/ddqn/: events.out.tfevents.1775577550.Yuvaraj.33532.0  events.out.tfevents.1775580148.Yuvaraj.32844.0  events.out.tfevents.1775580151.Yuvaraj.28752.0  events.out.tfevents.1775582027.Yuvaraj.17516.0  events.out.tfevents.1775639255.Yuvaraj.31880.0  events.out.tfevents.1775642709.Yuvaraj.39236.0  events.out.tfevents.1775644300.Yuvaraj.23124.0  events.out.tfevents.1775669153.Yuvaraj.31148.0  events.out.tfevents.1775669207.Yuvaraj.36520.0
round1_submission/server/: app.py
round1_submission/server/static/: style.css
round1_submission/visualizer/: grid_vis_3d.py  terminal_vis.py
(+136 files in other folders)
