[project]
name = "drone_dispatch_openenv"
version = "1.0.0"
description = "Autonomous Drone Dispatcher OpenEnv Simulation"
authors = [{name = "Antigravity Agent"}]
dependencies = [
    "openenv-core",
    "pydantic",
    "pydantic-settings",
    "openai",
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "server*"]

[tool.openenv]
config = "openenv.yaml"
